# lsmdb

./: Cargo.toml  README.md  clippy.toml  context.mdx  lsmdb.toml
.github/ISSUE_TEMPLATE/: release-signoff.md
.github/workflows/: bench.yml  ci.yml  release-gate.yml
docs/: architecture.md  compaction.md  config_preflight.md  diagnostics_bundle.md  mvcc.md  release_gate.md  sql_conformance.md  sql_subset.md  testing.md
examples/: server_quickstart.rs
src/: lib.rs
src/catalog/: column.rs  mod.rs  schema.rs  table.rs
src/config/: mod.rs
src/executor/: delete.rs  filter.rs  governance.rs  insert.rs  join.rs  mod.rs  projection.rs  scan.rs  update.rs
src/mvcc/: gc.rs  mod.rs  snapshot.rs  timestamp.rs  transaction.rs
src/observability/: mod.rs
src/planner/: logical.rs  mod.rs  physical.rs  rules.rs
src/server/: mod.rs  protocol.rs  tcp.rs
src/sql/: ast.rs  lexer.rs  mod.rs  parser.rs  validator.rs
src/storage/: engine.rs  mod.rs
src/storage/compaction/: leveled.rs  mod.rs  scheduler.rs  tiered.rs
src/storage/manifest/: mod.rs  version.rs
src/storage/memtable/: arena.rs  mod.rs  skiplist.rs
src/storage/sstable/: block.rs  bloom.rs  builder.rs  index.rs  mod.rs  reader.rs
src/storage/wal/: mod.rs  reader.rs  record.rs  writer.rs
tests/: sql_conformance.rs  sql_persistence.rs
tests/bench/: compaction_amplification.rs  concurrent_txn_throughput.rs  mixed_read_write.rs  read_latency.rs  sqlite_read_baseline.rs  sqlite_wal_baseline.rs  wal_recovery.rs  write_throughput.rs
tests/conformance/sql/: 01-core-supported.toml  02-errors-and-boundaries.toml
tests/fixtures/tls/: server.crt  server.key
tests/integration/: catalog.rs  compaction.rs  engine_compaction.rs  engine_recovery.rs  executor.rs  mvcc_isolation.rs  planner.rs  server.rs  sql_e2e.rs  wal_recovery.rs
tools/ci/: run_integration_tests.sh
tools/lsmdb-admin/: main.rs
tools/lsmdb-cli/: main.rs
tools/release/: check_critical_blockers.sh
