[package]
name = "lsmdb"
version = "0.1.0"
edition = "2024"
description = "An LSM-tree based relational database in Rust"
license = "MIT"

[[bin]]
name = "lsmdb-cli"
path = "tools/lsmdb-cli/main.rs"

[[bench]]
name = "write_throughput"
harness = false
path = "tests/bench/write_throughput.rs"

[[bench]]
name = "read_latency"
harness = false
path = "tests/bench/read_latency.rs"

[[bench]]
name = "mixed_read_write"
harness = false
path = "tests/bench/mixed_read_write.rs"

[[bench]]
name = "compaction_amplification"
harness = false
path = "tests/bench/compaction_amplification.rs"

[[bench]]
name = "wal_recovery"
harness = false
path = "tests/bench/wal_recovery.rs"

[[bench]]
name = "concurrent_txn_throughput"
harness = false
path = "tests/bench/concurrent_txn_throughput.rs"

[[bench]]
name = "sqlite_wal_baseline"
harness = false
path = "tests/bench/sqlite_wal_baseline.rs"

[dependencies]
bincode = "1.3"
bytes = "1.7"
crc32fast = "1.4"
crossbeam = "0.8"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
toml = "0.8"

[dev-dependencies]
criterion = "0.5"
hdrhistogram = "7.5"
proptest = "1.5"
rusqlite = { version = "0.31", features = ["bundled"] }
